# openstrate

./: __init__.py  pyproject.toml  requirements.txt
openstrate/: __init__.py  openstrate.py
