[tool.poetry]
name = "openstrate"
version = "0.1.4"
description = "Interface with Python machine vision sandbox over the internet."
authors = ["Petr Korolev <peterkorolev95@gmail.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
nanoid = "^2.0.0"
websocket-client = "^1.8.0"
tornado = "^6.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
openstrate = 'openstrate.openstrate:__main__'
